<resources>
    <string name="app_name">Marvel Universe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="universe">UNIVERSE</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="or">OR</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="facebook">LOGIN WITH FACEBOOK</string>
    <string name="facebook_app_id">321432352495609</string>
    <string name="fb_login_protocol_scheme">fb321432352495609</string>
    <string name="google">sign in with google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="rpt_password">Confirm your password</string>
    <string name="i_accept_the_terms_of_use">I accept the </string>
    <string name="terms_of_use"><u>Terms of Use</u></string>
    <string name="google_login">Sign in with your Google Account</string>
    <string name="facebook_login">Connect with your Facebook Account</string>
    <string name="comic_description_not_found">Oops, no description for this comic :(</string>
    <string name="character_description_not_found">Oops, no description for this hero :(</string>


    <string name="terms"><b>Terms and conditions</b>\nThese terms and conditions ("Agreement") sets forth the general terms and conditions of your use of the "Marvel Universe" mobile application ("Mobile Application" or "Service") and any of its related products and services (collectively, "Services"). This Agreement is legally binding between you ("User", "you" or "your") and this Mobile Application developer ("Operator", "we", "us" or "our"). By accessing and using the Mobile Application and Services, you acknowledge that you have read, understood, and agree to be bound by the terms of this Agreement. If you are entering into this Agreement on behalf of a business or other legal entity, you represent that you have the authority to bind such entity to this Agreement, in which case the terms "User", "you" or "your" shall refer to such entity. If you do not have such authority, or if you do not agree with the terms of this Agreement, you must not accept this Agreement and may not access and use the Mobile Application and Services. You acknowledge that this Agreement is a contract between you and the Operator, even though it is electronic and is not physically signed by you, and it governs your use of the Mobile Application and Services.

\n\n<b>Accounts and membership</b>

\nIf you create an account in the Mobile Application, you are responsible for maintaining the security of your account and you are fully responsible for all activities that occur under the account and any other actions taken in connection with it. We may, but have no obligation to, monitor and review new accounts before you may sign in and start using the Services. Providing false contact information of any kind may result in the termination of your account. You must immediately notify us of any unauthorized uses of your account or any other breaches of security. We will not be liable for any acts or omissions by you, including any damages of any kind incurred as a result of such acts or omissions.

\n\n<b>Links to other resources</b>

\nAlthough the Mobile Application and Services may link to other resources (such as websites, mobile applications, etc.), we are not, directly or indirectly, implying any approval, association, sponsorship, endorsement, or affiliation with any linked resource, unless specifically stated herein. We are not responsible for examining or evaluating, and we do not warrant the offerings of, any businesses or individuals or the content of their resources. We do not assume any responsibility or liability for the actions, products, services, and content of any other third parties. You should carefully review the legal statements and other conditions of use of any resource which you access through a link in the Mobile Application and Services. Your linking to any other off-site resources is at your own risk.

\n\n<b>Intellectual property rights</b>

\n"Intellectual Property Rights" means all present and future rights conferred by statute, common law or equity in or in relation to any copyright and related rights, trademarks, designs, patents, inventions, goodwill and the right to sue for passing off, rights to inventions, rights to use, and all other intellectual property rights, in each case whether registered or unregistered and including all applications and rights to apply for and be granted, rights to claim priority from, such rights and all similar or equivalent rights or forms of protection and any other results of intellectual activity which subsist or will subsist now or in the future in any part of the world. This Agreement does not transfer to you any intellectual property owned by the Operator or third parties, and all rights, titles, and interests in and to such property will remain (as between the parties) solely with the Operator. All trademarks, service marks, graphics and logos used in connection with the Mobile Application and Services, are trademarks or registered trademarks of the Operator or its licensor. Other trademarks, service marks, graphics and logos used in connection with the Mobile Application and Services may be the trademarks of other third parties. Your use of the Mobile Application and Services grants you no right or license to reproduce or otherwise use any of the Operator or third party trademarks.

\n\n<b>Limitation of liability</b>

\nTo the fullest extent permitted by applicable law, in no event will the Operator, its affiliates, directors, officers, employees, agents, suppliers or licensor be liable to any person for any indirect, incidental, special, punitive, cover or consequential damages (including, without limitation, damages for lost profits, revenue, sales, goodwill, use of content, impact on business, business interruption, loss of anticipated savings, loss of business opportunity) however caused, under any theory of liability, including, without limitation, contract, tort, warranty, breach of statutory duty, negligence or otherwise, even if the liable party has been advised as to the possibility of such damages or could have foreseen such damages. To the maximum extent permitted by applicable law, the aggregate liability of the Operator and its affiliates, officers, employees, agents, suppliers and licensor relating to the services will be limited to an amount greater of one dollar or any amounts actually paid in cash by you to the Operator for the prior one month period prior to the first event or occurrence giving rise to such liability. The limitations and exclusions also apply if this remedy does not fully compensate you for any losses or fails of its essential purpose.

\n\n<b>Changes and amendments</b>

\nWe reserve the right to modify this Agreement or its terms relating to the Mobile Application and Services at any time, effective upon posting of an updated version of this Agreement in the Mobile Application. When we do, we will post a notification in the Mobile Application. Continued use of the Mobile Application and Services after any such changes shall constitute your consent to such changes. Policy was created with https://www.WebsitePolicies.com

\n\n<b>Acceptance of these terms</b>

\n\nYou acknowledge that you have read this Agreement and agree to all its terms and conditions. By accessing and using the Mobile Application and Services you agree to be bound by this Agreement. If you do not agree to abide by the terms of this Agreement, you are not authorized to access or use the Mobile Application and Services.
    </string>
    <string name="avatar_hero">avatar hero</string>
    <string name="spider_man">Spider Man</string>
    <string name="characters_short_description">Character %1$d short description</string>
    <string name="characters_image">%1$s.%2$s</string>
    <string name="events_short_description">Event %1$d short description</string>
    <string name="favorites_short_description">Favorite %1$d short description</string>
    <string name="stories_short_description">Story %1$d short description</string>
    <string name="icon_heart">icon heart</string>
    <string name="character_name">Character name</string>
    <string name="start_year_end_year">Start year - End year</string>
    <string name="character_description">Character description</string>
    <string name="events">Events</string>
    <string name="comics">Comics</string>
    <string name="creators">Creators</string>
    <string name="stories">Stories</string>
    <string name="event_name">Event name</string>
    <string name="event_description">Event description</string>
    <string name="characters">Characters</string>
    <string name="log_out">Log out</string>
    <string name="user_name">User</string>
    <string name="user_email">user@mail.com</string>
    <string name="heroes">Heroes</string>
    <string name="favorites">Favorites</string>
    <string name="ops_nothing_found">Ops! Nothing found</string>
    <string name="not_found_image">not found image</string>
    <string name="ops_not_available">Oops, dates are not available for this one!</string>
    <string name="logo_image">logo image</string>
    <string name="comic_title">Comic Title</string>
    <string name="comic_description">Comic Description</string>
    <string name="favorite_title">Favorite title</string>
    <string name="favorite_description">Favorite description</string>
    <string name="ops_you_re_offline">Ops! you\'re offline!</string>

</resources>