<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/white">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/white"
           android:orientation="vertical">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/dim_8_dp"
               android:layout_marginEnd="@dimen/dim_8_dp"
               android:layout_marginBottom="@dimen/dim_5_dp"
               android:layout_marginTop="@dimen/dim_25_dp"
               android:orientation="horizontal">

               <TextView
                   android:id="@+id/txtNameCharacterDetails"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   tools:text="@string/character_name"
                   android:text="@string/character_name"
                   android:textSize="@dimen/dim_20_sp"
                   android:textStyle="bold"
                   android:textColor="@color/black"
                   android:layout_weight="1">
               </TextView>

               <ImageView
                   android:id="@+id/imgFavoriteCharacterDetails"
                   android:gravity="end"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:srcCompat="@drawable/ic_action_favorite_border"
                   android:contentDescription="@string/icon_heart" />
           </LinearLayout>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               tools:text="@string/start_year_end_year"
               android:text="@string/start_year_end_year"
               android:textSize="@dimen/dim_20_sp"
               android:textColor="@color/black"
               android:layout_marginStart="@dimen/dim_8_dp"
               android:layout_marginEnd="@dimen/dim_8_dp"
               android:layout_marginBottom="@dimen/dim_25_dp"/>

           <ImageView
               android:id="@+id/imgAvatarCharacterDetails"
               android:layout_width="match_parent"
               android:layout_height="250dp"
               android:contentDescription="@string/avatar_hero"
               android:scaleType="centerCrop"
               app:srcCompat="@drawable/img1" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               tools:text="@string/character_description"
               android:text="@string/character_description"
               android:textSize="@dimen/dim_20_sp"
               android:textColor="@color/black"
               android:layout_marginStart="@dimen/dim_8_dp"
               android:layout_marginEnd="@dimen/dim_8_dp"
               android:layout_marginTop="@dimen/dim_25_dp"
               android:layout_marginBottom="@dimen/dim_35_dp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               tools:text="events"
               android:text="@string/events"
               android:textSize="@dimen/dim_20_sp"
               android:textColor="@color/black"
               android:layout_marginStart="@dimen/dim_8_dp"
               android:layout_marginEnd="@dimen/dim_8_dp"
               android:layout_marginBottom="@dimen/dim_35_dp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               tools:text="events"
               android:text="@string/comics"
               android:textSize="@dimen/dim_20_sp"
               android:textColor="@color/black"
               android:layout_marginStart="@dimen/dim_8_dp"
               android:layout_marginEnd="@dimen/dim_8_dp"
               android:layout_marginBottom="@dimen/dim_35_dp"/>



           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               tools:text="events"
               android:text="@string/creators"
               android:textSize="@dimen/dim_20_sp"
               android:textColor="@color/black"
               android:layout_marginStart="@dimen/dim_8_dp"
               android:layout_marginEnd="@dimen/dim_8_dp"
               android:layout_marginBottom="@dimen/dim_35_dp"/>

       </LinearLayout>
   </ScrollView>

</com.google.android.material.card.MaterialCardView>
