<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:layout_marginRight="@dimen/dim_5_dp"
    android:layout_marginLeft="@dimen/dim_5_dp"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_8_dp"
                android:layout_marginEnd="@dimen/dim_8_dp"
                android:layout_marginBottom="@dimen/dim_5_dp"
                android:layout_marginTop="@dimen/dim_25_dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtNameEventrDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/event_name"
                    android:text="@string/event_name"
                    android:textSize="@dimen/dim_20_sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_weight="1">
                </TextView>


            </LinearLayout>

            <TextView
                android:id="@+id/txtYearDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/start_year_end_year"
                android:text="@string/start_year_end_year"
                android:textSize="@dimen/dim_20_sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/dim_8_dp"
                android:layout_marginEnd="@dimen/dim_8_dp"
                android:layout_marginBottom="@dimen/dim_25_dp"/>

            <ImageView
                android:id="@+id/imgAvatarEventDetails"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/avatar_hero"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/img2" />

            <TextView
                android:id="@+id/txtDescriptionEventDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/event_description"
                android:text="@string/event_description"
                android:textSize="@dimen/dim_20_sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/dim_8_dp"
                android:layout_marginEnd="@dimen/dim_8_dp"
                android:layout_marginTop="@dimen/dim_25_dp"
                android:layout_marginBottom="@dimen/dim_35_dp" />

            <TextView
                android:id="@+id/txtCharacterEventDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Characters"
                android:text="@string/characters"
                android:textSize="@dimen/dim_20_sp"
                android:textColor="@color/black"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="@dimen/dim_8_dp"
                android:layout_marginEnd="@dimen/dim_8_dp"
                android:layout_marginBottom="@dimen/dim_35_dp"/>

            <TextView
                android:id="@+id/txtStoryEventDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/stories"
                android:text="@string/stories"
                android:textSize="@dimen/dim_20_sp"
                android:textColor="@color/black"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="@dimen/dim_8_dp"
                android:layout_marginEnd="@dimen/dim_8_dp"
                android:layout_marginBottom="@dimen/dim_35_dp"/>

        </LinearLayout>
    </ScrollView>

</com.google.android.material.card.MaterialCardView>
